--- a/src/app/scotches/list/list.template.html
+++ b/src/app/scotches/list/list.template.html
@@ -5,28 +5,32 @@
 <div>
 	<table>
 	  <tr>
-	    <th class="openColumn"></th>
-	    <th>Distiller</th> 
-	    <th>Expression</th>
-	    <th class="ageColumn">Age</th>
-	    <th class="styleColumn">Style</th>
-	    <th class="regionColumn">Region</th>
-	    <th class="instockColumn">In Stock</th>
-	    <th class="editColumn"></th>
+	    <th [ngClass]="'openColumn'"></th>
+	    <th [ngClass]="'distillerColumn'">Distiller</th> 
+	    <th [ngClass]="'expressionColumn'">Expression</th>
+	    <th [ngClass]="'ageColumn'">Age</th>
+	    <th [ngClass]="'styleColumn'">Style</th>
+	    <th [ngClass]="'regionColumn'">Region</th>
+        <th [ngClass]="'ratingColumn'">Rating</th>
+	    <th [ngClass]="'instockColumn'">In Stock</th>
+	    <th [ngClass]="'editColumn'"></th>
 	  </tr>
 	  <tr *ngFor="let scotch of scotches">
-		<td class="openColumn"><button [ngClass]="'button'" (click)="showDetails(scotch)"><i class="fa fa-folder-open-o"></i></button></td>
-        <td>{{scotch.distillerName}}</td>
-		<td>{{scotch.flavor}}</td>
-		<td class="ageColumn">{{scotch.age}}</td>
-		<td class="styleColumn">{{scotch.style}}</td>
-		<td class="regionColumn">{{scotch.region}}</td>
-		<td class="instockColumn">
+		<td [ngClass]="'openColumn'"><button [ngClass]="'button'" (click)="showDetails(scotch)"><i class="fa fa-folder-open-o"></i></button></td>
+        <td [ngClass]="'distillerColumn'">{{scotch.distillerName}}</td>
+		<td [ngClass]="'expressionColumn'">{{scotch.flavor}}</td>
+		<td [ngClass]="'ageColumn'">{{scotch.age}}</td>
+		<td [ngClass]="'styleColumn'">{{scotch.style}}</td>
+		<td [ngClass]="'regionColumn'">{{scotch.region}}</td>
+        <td [ngClass]="'ratingColumn'">
+          <app-rating-star [rating]="scotch.rating ? scotch.rating : 0"></app-rating-star>
+        </td>
+        <td [ngClass]="'instockColumn'">
           <div *ngIf="scotch.inStock">
-            <span class="check-mark"><i class="fa fa-check"></i></span>
+            <span [ngClass]="'check-mark'"><i class="fa fa-check"></i></span>
           </div>
         </td>
-		<td class="editColumn">
+		<td [ngClass]="'editColumn'">
 			<button [ngClass]="'button'" (click)="editScotch(scotch)"><i class="fa fa-pencil"></i> Edit</button>
 			<button [ngClass]="'button'" (click)="confirmDeleteScotch(scotch)"><i class="fa fa-times"></i> Delete</button>
 		</td>
