--- a/src/app/scotches/view/view.template.html
+++ b/src/app/scotches/view/view.template.html
@@ -56,7 +56,7 @@
         <th [ngClass]="'editButtomColumn'"></th>
 	  </tr>
 	  <tr *ngFor="let note of notes">
-        <td [ngClass]="'dateColumn'">{{note.dateAdded | date: 'MM/dd/yyyy'}}</td>
+        <td [ngClass]="'dateColumn'">{{note.dateAdded | utcDate | date:'MM/dd/yyyy'}}</td>
 		<td>{{note.note}}</td>
 		<td [ngClass]="'editButtomColumn'">
 			<button [ngClass]="'button'" (click)="editNote(note)"><i class="fa fa-pencil"></i> Edit</button>
@@ -85,7 +85,7 @@
         <th [ngClass]="'editButtomColumn'"></th>
 	  </tr>
 	  <tr *ngFor="let tasting of tastings">
-        <td [ngClass]="'dateColumn'">{{tasting.dateAdded | date: 'MM/dd/yyyy'}}</td>
+        <td [ngClass]="'dateColumn'">{{tasting.dateAdded | utcDate | date:'MM/dd/yyyy'}}</td>
 		<td>{{tasting.location}}</td>
         <td [ngClass]="'ratingColumn'">
           <app-rating-star [rating]="tasting.rating ? tasting.rating : 0"></app-rating-star>
