--- a/src/app/scotches/list/list.template.html
+++ b/src/app/scotches/list/list.template.html
@@ -1,20 +1,53 @@
 <app-page-header [title]="title" [subtitle]="subtitle"></app-page-header>
 <div style="margin: 10px">
-	<button [ngClass]="'button'" (click)="addScotch()"><i class="fa fa-plus"></i> New</button>
+  <button [ngClass]="'button'" (click)="addScotch()"><i class="fa fa-plus"></i> New</button>
+  <button [ngClass]="'button'" (click)="toggleFilterRow()"><i class="fa fa-filter"></i> Filter</button>
 </div>
 <div>
-	<table>
+	<table id="scotchTable">
 	  <tr>
 	    <th [ngClass]="'openColumn'"></th>
-	    <th [ngClass]="'distillerColumn'">Distiller</th> 
+	    <th [ngClass]="'distillerColumn'" (click)="sortTable(1)">Distiller <i class="fa fa-sort"></i></th> 
 	    <th [ngClass]="'expressionColumn'">Expression</th>
-	    <th [ngClass]="'ageColumn'">Age</th>
-	    <th [ngClass]="'styleColumn'">Style</th>
-	    <th [ngClass]="'regionColumn'">Region</th>
-        <th [ngClass]="'ratingColumn'">Rating</th>
-	    <th [ngClass]="'instockColumn'">In Stock</th>
+	    <th [ngClass]="'ageColumn'" (click)="sortTableNumeric(3)">Age <i class="fa fa-sort"></i></th>
+	    <th [ngClass]="'styleColumn'" (click)="sortTable(4)">Style <i class="fa fa-sort"></i></th>
+	    <th [ngClass]="'regionColumn'" (click)="sortTable(5)">Region <i class="fa fa-sort"></i></th>
+        <th [ngClass]="'ratingColumn'" (click)="sortTable(6)">Rating <i class="fa fa-sort"></i></th>
+	    <th [ngClass]="'instockColumn'" (click)="sortTable(10)">In Stock <i class="fa fa-sort"></i></th>
 	    <th [ngClass]="'editColumn'"></th>
 	  </tr>
+      <tr [ngClass]="'filterRow'" *ngIf="showFilters">
+        <td [ngClass]="'openColumn'" style="color: white; font-weight: light"><i class="fa fa-filter"></i></td>
+        <td [ngClass]="'distillerColumn'">
+          <input type="text" id="distillerFilter" (keyup)="filterTable(1, 'distillerFilter')" size="15">
+        </td>
+        <td [ngClass]="'expressionColumn'">
+          <input type="text" id="expressionFilter" (keyup)="filterTable(2, 'expressionFilter')" size="15">
+        </td>
+        <td [ngClass]="'ageColumn'">
+          <input type="text" id="ageFilter" (keyup)="filterTable(3, 'ageFilter')" size="2" maxlength="2">
+        </td>
+        <td [ngClass]="'styleColumn'">
+          <input type="text" id="styleFilter" (keyup)="filterTable(4, 'styleFilter')" size="5" >
+        </td>
+        <td [ngClass]="'regionsColumn'">
+          <input type="text" id="regionFilter" (keyup)="filterTable(5, 'regionFilter')" size="10" >
+        </td>
+        <td [ngClass]="'ratingColumn'">
+          <select id="ratingFilter" name="region" (change)="filterByRating(6, 'ratingFilter')">
+            <option value=""></option>
+            <option value="1">*</option>
+            <option value="2">**</option>
+            <option value="3">***</option>
+            <option value="4">*****</option>
+            <option value="5">******</option>
+          </select>
+        </td>
+        <td [ngClass]="'instockColumn'">
+          <input type="checkbox" id="instockFilter" (click)="filterInStock(7, 'instockFilter')" (value)="1">
+        </td>
+        <td [ngClass]="'editColumn'"></td>
+      </tr>
 	  <tr *ngFor="let scotch of scotches">
 		<td [ngClass]="'openColumn'"><button [ngClass]="'button'" (click)="showDetails(scotch)"><i class="fa fa-folder-open-o"></i></button></td>
         <td [ngClass]="'distillerColumn'">{{scotch.distillerName}}</td>
@@ -34,6 +67,8 @@
 			<button [ngClass]="'button'" (click)="editScotch(scotch)"><i class="fa fa-pencil"></i> Edit</button>
 			<button [ngClass]="'button'" (click)="confirmDeleteScotch(scotch)"><i class="fa fa-times"></i> Delete</button>
 		</td>
+        <td [ngClass]="'hiddenData'">{{scotch.rating}}</td>
+        <td [ngClass]="'hiddenData'">{{scotch.inStock ? 1 : 0}}</td>
 	  </tr>
 	</table>
 </div>
