--- a/src/app/scotches/view/view.component.css
+++ b/src/app/scotches/view/view.component.css
@@ -100,6 +100,89 @@
   text-align: center;
 }
 
+
+/*** Tabs *********************/
+
+a:link, a:visited, a:active, a:hover
+{
+  text-decoration: none;
+  
+}
+
+.tabButton {
+  float:left;
+  box-sizing: inherit;
+  padding: 8px 16px;
+  margin: 1px 1px 1px 0;
+  border-style: solid;
+  border-color: #003804;
+  border-width: 1px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-style: solid;
+  border-width: 1px 1px 0 1px;
+  border-color: darkolivegreen;
+}
+
+._activeTab, a:hover {
+  background-color: #d0dfd2;
+  color: black;
+  border-bottom: none;
+}
+
+
+._inactiveTab {
+  background-color: #003804;
+  color: white;
+}
+
+.tabContainer {
+  border-style: solid;
+  border-width: 0 1px 1px 1px;
+  border-color: darkolivegreen;
+  background-color: #d0dfd2;
+}
+
+.tabBar {
+  /* float: left; */
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  border-left: none;
+  border-right: none;
+  border-color: darkolivegreen;
+  /* background-color:  #003804; */
+  height: 34px;
+  width: 100%;
+}
+
+.tab {
+  padding: 20px 10px 5px 20px;
+}
+
+.button
+{
+    border-radius: 3px;
+    border: 2px solid black;
+    height: 20px;
+    margin: 3px;
+    font-family: sans-serif;
+    font-size: 75%;
+    color: black;
+}
+
+.button:hover
+{
+    background-color: #003804;
+    color: white;
+}
+
+
+
+
+
+
 /***  Notes Section ********************/
 
 .scotchDetailNotes {
