Added bottling notes
modified HTML, and CSS filed to edit and display bottling notes.

--- a/src/app/scotches/edit/scotch-edit-form.template.html
+++ b/src/app/scotches/edit/scotch-edit-form.template.html
@@ -26,6 +26,10 @@
   <input type="checkbox" id="inStock" [(ngModel)]="scotch.inStock">
 </div>
 <div>
+  <div><label for="bottlingNotes">Bottling Note</label></div>
+  <div><textarea id="bottlingNotes" [(ngModel)]="scotch.bottlingNotes" rows="7" cols="45"></textarea></div>
+</div>
+<div>
   <div><label for="comment">Comment</label></div>
   <div><textarea id="comment" [(ngModel)]="scotch.comment" rows="7" cols="45"></textarea></div>
 </div>
