Tweaked form labels
made 'em bold!

--- a/src/app/lookup/edit/style-edit.form.template.html
+++ b/src/app/lookup/edit/style-edit.form.template.html
@@ -1,4 +1,4 @@
 <div>
-    <div><label for="name">Scotch Style</label></div>
+    <div><label for="name" [ngClass]="'formLabel'">Scotch Style</label></div>
     <div><input type="text" id="name" [(ngModel)]="style.name"></div>
 </div>
