--- a/src/assets/partials/page-header/page-header.component.html
+++ b/src/assets/partials/page-header/page-header.component.html
@@ -8,7 +8,7 @@
 				<a (click)="onSelect('tastings')"><i class="fa fa-glass"></i> Tastings</a>
 				<a (click)="onSelect('wishlists')"><i class="fa fa-file-text-o"></i> Wish Lists</a>
 				<hr>
-				<a (click)="onSelect('settings')"><i class="fa fa-sign-out"></i> Settings</a>
+				<a (click)="onSelect('settings')"><i class="fa fa-gear"></i> Settings</a>
 				<hr>
 				<a (click)="onSelect('signout')"><i class="fa fa-sign-out"></i> Sign Out</a>
 			</div>
